lintian (2.5.2) UNRELEASED; urgency=low

  * Summary of tag changes:
    + Added:
      - package-has-long-file-name
      - source-package-component-has-long-file-name
      - upstart-job-in-etc-init.d-not-registered-via-update-rc.d
      - debian-rules-uses-deprecated-makefile
    + Removed:
      - calls-suidperl-directly
      - suid-perl-script-but-no-perl-suid-dep

  * checks/binaries:
    + [NT] Added lib/${MULTIARCH_DIR} to the list of paths to
      check for public shared libraries.  Thanks to Sven Joachim
      for the report and the patch.  (Closes: #630698)
    + [NT] Recognise .gox files as object files that cannot be
      stripped.  Thanks to Matthias Klose for the report.
      (Closes: #624521)
  * checks/circular-deps.desc:
    + [NT] Fixed typo; thanks to Nicolás Alvarez for the report
      and patch.  (Closes: #630925)
  * checks/copyright-file:
    + [NT] Stricten one of the regexes for catching left over
      helper templates.  This should prevent false-positives for
      some license texts.  Thanks to Charles Plessy for the
      report.  (Closes: #631674)
  * checks/deb-format{,.desc}:
    + [NT] Allow data.tar.xz as the third member.  Thanks to
      Ansgar Burchardt for the report and patch.
      (Closes: #632556)
  * checks/debhelper:
    + [NT] Do not trigger deprecation warning for dh_python if it
      is followed by a "$".  This prevents false-positives when
      a Makefile variable is used to choose between dh_python2
      and dh_python3.  Thanks to Leonid Borisenko for the report.
      (Closes: #631662)
    + [NT] Do not trigger deprecation warning for dh_python-ply,
      which Lintian incorrectly identified as dh_python.  Thanks
      to Daniele Tricoli for the report.  (Closes: #632693)
    + [NT] Fix a broken regex that caused Lintian skip brace
      expansion checks for some debhelper files.  Thanks to
      Jakub Wilk for the report and the patch.  (Closes: #632883)
  * checks/duplicate-files: