@@ -1029,3 +1029,9 @@ Info: The package appear to be a Java library and depending on one
 Ref: http://packages.qa.debian.org/j/java-common/news/20100405T221415Z.html,
  http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=227587
 
+Tag: documentation-package-not-architecture-independent
+Severity: normal
+Certainty: certain
+Info: Documentation packages usually shouldn't carry anything that requires
+ recompiling on various architectures, in order to save space on mirrors.
+
