@@ -1,0 +1,1 @@
+W: fields-doc-pkg-wrong-arch-doc: documentation-package-not-architecture-independent
